--- a/css/style.css
+++ b/css/style.css
@@ -32,17 +32,6 @@ body {
     font-family: 'Ubuntu', sans-serif;
 }
 
-.containner {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-
-    width: 100%;
-
-    margin-top: 30%;
-    background: var(--White);
-    padding: 1.6rem 7rem;
-}
 
 main::before {
     content: '';
@@ -73,7 +62,7 @@ nav ul li p {
 
 }
 
-nav ul li .step-fase {
+nav ul li .step-phase {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -82,6 +71,22 @@ nav ul li .step-fase {
     height: 35px;
     border-radius: 50%;
     color: #fff;
+
+}
+
+nav ul li .step-phase .one {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--White);
+    width: 35px;
+    height: 35px;
+    padding: 1.3rem;
+    font-weight: 700;
+    border-radius: 50%;
+    background: var(--Alabaster);
+    color: var(--Marine-blue);
+
 }
 
 .step1,
@@ -93,38 +98,173 @@ nav ul li .step-fase {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }
 
-.containner-page {
+.container-page {
+    border-radius: 10px;
     margin-top: 20px;
     background-color: var(--White);
     max-width: 375px;
-    height: 400px;
-    border-radius: 10px;
+    height: fit-content;
     padding: 3rem;
 }
 
 .rota-step-1 {
     display: flex;
     justify-content: end;
+}
+
+.step2 .text {
+    margin-bottom: 2rem;
+    font-size: 1.8rem;
+}
+
+.step2 .plan {
+    border: 1px solid var(--Light-gray);
+    border-radius: 12px;
+    margin-bottom: 1.2rem;
+    padding: 1.8rem;
+    display: flex;
+    align-items: start;
+    gap: 1.5rem;
+    cursor: pointer;
+}
+
+.step2 .plan:hover {
+    border: 1px solid var(--Marine-blue);
+    background: var(--Alabaster);
+}
+
+.step2 .plan img {
+    width: 4.3rem;
+}
+
+.step2 .plan p {
+    font-size: 1.7rem;
+    font-weight: 700;
+    color: var(--Marine-blue)
+}
+
+.step2 .plan span {
+    color: var(--Cool-gray);
+    font-size: 1.5rem;
+}
+
+.step2 .plan .destaque {
+    color: var(--Marine-blue);
+    font-weight: 500;
+    font-size: 1.5rem;
+    margin-top: .5rem;
 
 }
 
+.step2 .period {
+    margin-top: 2.7rem;
+    display: flex;
+    padding: 2rem 6rem;
+    background: var(--Magnolia);
+    border-radius: 12px;
+}
 
+.step2 .period .monthly {
+    color: var(--Marine-blue);
+    font-weight: 700;
+}
+
+.step2 .period .yearly {
+    color: var(--Cool-gray);
+    font-weight: 700;
+}
+.switch{
+    border: 1px solid var(--Marine-blue);
+    width: 40px;
+    height: 22px;
+    margin:0 auto;
+    position:relative;
+    border-radius: 9999px; 
+}
+.switch input{
+    display:block;
+    width:100%;
+    height: 100%;
+ 
+    position:absolute;
+    top:0;
+    left:0;
+    z-index: 10; 
+    opacity: 0;
+    cursor: pointer; 
+}
+
+.switch label{
+    display: block;
+    width: 100%;
+    height: 100%; 
+    background: var(--Marine-blue);  
+    border-radius: 40px;
+}
+.switch label:after{
+    content: ""; 
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    bottom: -10px;
+    left: -10px;
+     z-index: -1; 
+    border-radius: inherit; 
+}
+.switch label span{
+    display: block;
+    width: 40%;
+    height: 80%;
+    background: #C0C0C0;   
+    position: absolute;
+    z-index: 2;
+    right: 55%;
+    top: 2px;  
+    background: var(--White);  
+    border-radius: inherit;   
+  }   
+  .switch input:checked ~ label span{
+    right: 2px;
+  }
+  
+.step3 .services {
+    border: 1px solid var(--Light-gray);
+    margin-top: 1.6rem;
+    border-radius: 10px;
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.step5 {
+    text-align: center;
+}
+
+.step5 img {
+    width: 5.3rem;
+    margin: 5rem 0 2rem;
+}
+
+.step5 .container-page {
+    height: 41rem;
+}
 
 .rota-step-2,
 .rota-step-3,
 .rota-step-4 {
     display: flex;
+    align-items: center;
     justify-content: space-between;
 
 }
 
-.rota-step-1 a.button,
-.rota-step-2 a.button,
-.rota-step-3 a.button,
-.rota-step-4 a.button {
+.rota-step-1 a.buttonS1,
+.rota-step-2 a.buttonS2,
+.rota-step-3 a.buttonS3,
+.rota-step-4 a.buttonS4 {
     font-size: 1.6rem;
     border: 1px solid var(--White);
     font-weight: 500;
@@ -146,13 +286,13 @@ nav ul li .step-fase {
 
 }
 
-.containner-page h2 {
+.container-page h2 {
     color: var(--Marine-blue);
     margin-bottom: 1.4rem;
     font-weight: 700;
 }
 
-.containner-page p {
+.container-page p {
     color: var(--Cool-gray);
     line-height: 150%;
     font-weight: 400;
@@ -182,9 +322,14 @@ nav ul li .step-fase {
 }
 
 
-
-.hide {
-    display: none;
+.container-rotas {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background: var(--White);
+    padding: 1.6rem 0;
 }
 
 .attribution {
@@ -194,4 +339,17 @@ nav ul li .step-fase {
 
 .attribution a {
     color: hsl(228, 45%, 44%);
+}
+
+.wrapper-rotas {
+   
+    width: 350px;
+}
+
+.center {
+    margin: 0 auto;
+
+}
+.hide {
+    display: none;
 }
