--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,6 @@ body {
     background: var(--Light-gray);
     font-family: 'Ubuntu', sans-serif;
 }
-
-
 main::before {
     content: '';
     width: 100%;
@@ -175,60 +173,65 @@ nav ul li .step-phase .one {
     color: var(--Cool-gray);
     font-weight: 700;
 }
-.switch{
+
+.switch {
     border: 1px solid var(--Marine-blue);
     width: 40px;
     height: 22px;
-    margin:0 auto;
-    position:relative;
-    border-radius: 9999px; 
-}
-.switch input{
-    display:block;
-    width:100%;
-    height: 100%;
- 
-    position:absolute;
-    top:0;
-    left:0;
-    z-index: 10; 
-    opacity: 0;
-    cursor: pointer; 
+    margin: 0 auto;
+    position: relative;
+    border-radius: 9999px;
 }
 
-.switch label{
+.switch input {
     display: block;
     width: 100%;
-    height: 100%; 
-    background: var(--Marine-blue);  
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.switch label {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: var(--Marine-blue);
     border-radius: 40px;
 }
-.switch label:after{
-    content: ""; 
+
+.switch label:after {
+    content: "";
     position: absolute;
     top: -10px;
     right: -10px;
     bottom: -10px;
     left: -10px;
-     z-index: -1; 
-    border-radius: inherit; 
+    z-index: -1;
+    border-radius: inherit;
 }
-.switch label span{
+
+.switch label span {
     display: block;
     width: 40%;
     height: 80%;
-    background: #C0C0C0;   
+    background: #C0C0C0;
     position: absolute;
     z-index: 2;
     right: 55%;
-    top: 2px;  
-    background: var(--White);  
-    border-radius: inherit;   
-  }   
-  .switch input:checked ~ label span{
+    top: 2px;
+    background: var(--White);
+    border-radius: inherit;
+}
+
+.switch input:checked~label span {
     right: 2px;
-  }
-  
+}
+
 .step3 .services {
     border: 1px solid var(--Light-gray);
     margin-top: 1.6rem;
@@ -285,6 +288,12 @@ nav ul li .step-phase .one {
     text-decoration: none;
 
 }
+footer{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
 
 .container-page h2 {
     color: var(--Marine-blue);
@@ -321,10 +330,7 @@ nav ul li .step-phase .one {
     font-weight: 700;
 }
 
-
 .container-rotas {
-    position: absolute;
-    bottom: 0;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -342,7 +348,7 @@ nav ul li .step-phase .one {
 }
 
 .wrapper-rotas {
-   
+
     width: 350px;
 }
 
@@ -350,6 +356,7 @@ nav ul li .step-phase .one {
     margin: 0 auto;
 
 }
+
 .hide {
     display: none;
 }
