--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 body {
     font-size: 1.6rem;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: var(--Light-gray);
     font-family: 'Ubuntu', sans-serif;
 }
@@ -101,8 +101,9 @@ nav ul li .step-phase .one {
 .container-page {
     border-radius: 10px;
     margin-top: 20px;
+    margin-bottom: 100px;
     background-color: var(--White);
-    max-width: 375px;
+    max-width: 345px;
     height: fit-content;
     padding: 3rem;
 }
